tests/files/parser_tests/should_fail/017.cmdr
//Should not parse due to unterminated index
x = [1, 2, 3][1;
